tdf#108486 Only apply hyperlink settings if something did change

Change-Id: Idc601e9ca4ac3ea429d3b514ad6af4198954ca33
Reviewed-on: https://gerrit.libreoffice.org/38859
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>
Tested-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>
(cherry picked from commit fcd12c6d8574c1cd4c6ff45ba54e5d286d42eaad)
Reviewed-on: https://gerrit.libreoffice.org/38863
Tested-by: Jenkins <ci@libreoffice.org>